objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>( TODAY() -Birthdate)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <description>Experience in years</description>
        <label>Experience</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>P-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Telugu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualitification__c</fullName>
        <description>Stores the qualifications</description>
        <label>Qualitification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MBBS</fullName>
                </value>
                <value>
                    <fullName>Diploma in Child Health (DCH)</fullName>
                </value>
                <value>
                    <fullName>MD - Pediatrics</fullName>
                </value>
                <value>
                    <fullName>DNB - Pediatrics</fullName>
                </value>
                <value>
                    <fullName>DM - Cardiology</fullName>
                </value>
                <value>
                    <fullName>MD - General Medicine</fullName>
                </value>
                <value>
                    <fullName>DNB - Cardiothoracic Surgery</fullName>
                </value>
                <value>
                    <fullName>FRCS - Cardiothoracic Surgery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>